@@ -4,6 +4,7 @@ Pint Changelog
 0.25.0 (unreleased)
 -------------------
 
+- Fix raising exception in `Quantity.from_tuple` with invalid units (#2199)
 - Bump minimum Python version to 3.11.
 - Upgrade code to Python 3.11.
 - Move to pixi/uv/ruff.
